GNOME Bugzilla – Bug 793386
mesa gallium vendor string changed, doesn't match whitelist anymore
Last modified: 2018-02-13 16:09:14 UTC
The whitelist is hardcoded in gstreamer-vaapi/gst/vaapi/gstvaapipluginutil.c static const gchar *whitelist[] = { "Intel i965 driver", "mesa gallium vaapi", NULL }; Mesa's new vendor string includes the mesa version and I think the driver name. Relevant git commit: https://cgit.freedesktop.org/mesa/mesa/commit/?id=5db29d62ce1fefa3f2ee6e4a4688576fde4bde4a
Created attachment 368274 [details] [review] plugins: update mesa's vendor string in whitelist Mesa has updated its VA-API Gallium driver vendor string: https://cgit.freedesktop.org/mesa/mesa/commit/?id=5db29d62ce1fefa3f2ee6e4a4688576fde4bde4a This patch tries to cover both, the old and the new one.
@Christoph: does this work for you?
It does indeed work for me. Are there incompatible implementations so that the whitelist for only mesa is definitely needed?
(In reply to Christoph Haag from comment #3) > It does indeed work for me. > > Are there incompatible implementations so that the whitelist for only mesa > is definitely needed? Yes, the main problematic one is the VDPAU bridge, which is unmantained.
Attachment 368274 [details] pushed as 19fe5c4 - plugins: update mesa's vendor string in whitelist